maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:29: error: not found: value hateurMonde
  for (i <- 1 to hateurMonde) {
                 ^JediEscaper:51: error: missing arguments for method aMurNord in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if (!aMurNord) {
       ^JediEscaper:56: error: missing arguments for method aMurOuest in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if (!aMurOuest) {
       ^